完善后端统计

--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,15 +1,32 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>业务站点实时监控平台</title>
-  <base href="/">
-  <meta name="renderer"  content="webkit">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>业务站点实时监控平台</title>
+    <base href="/">
+    <meta name="renderer" content="webkit">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body> 
-    <!-- <script> !(function (c, b, d, a) { c[a] || (c[a] = {}); c[a].config = { appKey: '9e1c74f3b7f945d58ec330b20f61e6a9', imgUrl: 'http://localhost:8230/Monitor/Up?',disableHook:false, disableJS:true }; var dom = document.createElement("script"); dom.setAttribute("crossorigin", "anonymous"); dom.setAttribute("src", d); document.body.insertBefore(dom, document.body.firstChild); })(window, document, 'http://localhost:5210/bundle.js', "__ml"); </script> -->
-  <app-root></app-root>
+
+<body>
+    <!-- <script>
+        !(function(c, b, d, a) {
+            c[a] || (c[a] = {});
+            c[a].config = {
+                appKey: '5b8e852239f1c11d680b3cf2',
+                imgUrl: 'http://localhost:9000/Up?',
+                disableHook: false,
+                disableJS: false
+            };
+            var dom = document.createElement("script");
+            dom.setAttribute("crossorigin", "anonymous");
+            dom.setAttribute("src", d);
+            document.body.insertBefore(dom, document.body.firstChild);
+        })(window, document, 'http://localhost:9002/bundle.js', "__ml");
+    </script> -->
+    <app-root></app-root>
 </body>
+
 </html>
