--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="zh">
 <head>
     <meta charset="utf-8">
     <title>业务站点实时监控平台</title>
@@ -11,21 +10,7 @@
 </head>
 
 <body>
-    <!-- <script>
-        !(function(c, b, d, a) {
-            c[a] || (c[a] = {});
-            c[a].config = {
-                appKey: '5b8e852239f1c11d680b3cf2',
-                imgUrl: 'http://localhost:9000/Up?',
-                disableHook: false,
-                disableJS: false
-            };
-            var dom = document.createElement("script");
-            dom.setAttribute("crossorigin", "anonymous");
-            dom.setAttribute("src", d);
-            document.body.insertBefore(dom, document.body.firstChild);
-        })(window, document, 'http://localhost:9002/bundle.js', "__ml");
-    </script> -->
+    <script> !(function (c, b, d, a) { c[a] || (c[a] = {}); c[a].config = { appKey: '5b97472dd67ed04010c3152b', imgUrl: 'http://localhost:9000/Up?',disableHook:false, disableJS:false }; var dom = document.createElement("script"); dom.setAttribute("crossorigin", "anonymous"); dom.setAttribute("src", d); document.body.insertBefore(dom, document.body.firstChild); })(window, document, 'http://localhost:9002/bundle.js', "__ml"); </script>
     <app-root></app-root>
 </body>
 
