--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="zh">
+
 <head>
     <meta charset="utf-8">
     <title>业务站点实时监控平台</title>
@@ -10,12 +11,21 @@
 </head>
 
 <body>
-    <script> !(function (c, b, d, a) { c[a] || (c[a] = {}); c[a].config = { appKey: '5b97472dd67ed04010c3152b', imgUrl: 'http://localhost:9000/Up?',disableHook:false, disableJS:false }; var dom = document.createElement("script"); dom.setAttribute("crossorigin", "anonymous"); dom.setAttribute("src", d); document.body.insertBefore(dom, document.body.firstChild); })(window, document, 'http://localhost:9002/bundle.js', "__ml"); </script>
-    <!-- <script>
-        !(function(c,b,d,a){c[a]||(c[a]={});c[a].config={pid:"dea9qaysgm@7cbe69aedc8eb2c",imgUrl:"https://arms-retcode.aliyuncs.com/r.png?",enableSPA:true};
-        with(b)with(body)with(insertBefore(createElement("script"),firstChild))setAttribute("crossorigin","",src=d)
-        })(window,document,"https://retcode.alicdn.com/retcode/bl.js","__bl");
-        </script> -->
+    <script>
+        !(function(c, b, d, a) {
+            c[a] || (c[a] = {});
+            c[a].config = {
+                appKey: '5b97472dd67ed04010c3152b',
+                imgUrl: 'http://hubing.online:8081/Up?',
+                disableHook: false,
+                disableJS: false
+            };
+            var dom = document.createElement("script");
+            dom.setAttribute("crossorigin", "anonymous");
+            dom.setAttribute("src", d);
+            document.body.insertBefore(dom, document.body.firstChild);
+        })(window, document, 'http://hubing.online:8082/bundle.js', "__ml");
+    </script>
     <app-root></app-root>
 </body>
 
