--- a/web/src/index.html
+++ b/web/src/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <script>
+    <script> !(function (c, b, d, a) { c[a] || (c[a] = {}); c[a].config = { appKey: '5b97472dd67ed04010c3152b', imgUrl: 'http://localhost:9000/Up?',disableHook:false, disableJS:false }; var dom = document.createElement("script"); dom.setAttribute("crossorigin", "anonymous"); dom.setAttribute("src", d); document.body.insertBefore(dom, document.body.firstChild); })(window, document, 'http://localhost:9002/bundle.js', "__ml"); </script>
+    <!-- <script>
         !(function(c, b, d, a) {
             c[a] || (c[a] = {});
             c[a].config = {
@@ -25,7 +26,7 @@
             dom.setAttribute("src", d);
             document.body.insertBefore(dom, document.body.firstChild);
         })(window, document, 'http://hubing.online:8082/bundle.js', "__ml");
-    </script>
+    </script> -->
     <app-root></app-root>
 </body>
 
