--- a/web/src/index.html
+++ b/web/src/index.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>业务站点实时监控平台</title>
+    <title>前端性能监控平台</title>
     <base href="/">
     <meta name="renderer" content="webkit">
+    <meta name="keywords" content="前端监控，前端性能监控，前端异常监控，前端请求监控，web，web-monitor，monitor">
+    <meta name="description" content="前端监控，性能监控平台。The front end monitoring platform focuses on Web end experience data monitoring. Three aspects of the health of Web pages are monitored: page opening speed (speed measurement), page stability (JS Error), and external service call success rate (API).">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
