--- a/web/src/index.html
+++ b/web/src/index.html
@@ -13,7 +13,23 @@
 </head>
 
 <body>
-        <!-- <script> !(function (c, b, d, a) { c[a] || (c[a] = {}); c[a].config = { userId: '',appKey: '5cb6ca0e6dea283b44dcb2ec', imgUrl: 'http://localhost:9000/Up?',disableHook:false, disableJS:false }; var dom = document.createElement("script"); dom.setAttribute("crossorigin", "anonymous"); dom.setAttribute("src", d); document.body.insertBefore(dom, document.body.firstChild); })(window, document, 'http://hubing.online:8082/bundle.js', "__ml"); </script> -->
+    <!-- <script>
+        !(function(c, b, d, a) {
+            c[a] || (c[a] = {});
+            c[a].config = {
+                userId: '',
+                appKey: '5cbdcdb0e32ce4197c23902e',
+                imgUrl: 'http://localhost:9000/Up?',
+                disableHook: false,
+                disableJS: false,
+                disableResource: true
+            };
+            var dom = document.createElement("script");
+            dom.setAttribute("crossorigin", "anonymous");
+            dom.setAttribute("src", d);
+            document.body.insertBefore(dom, document.body.firstChild);
+        })(window, document, 'http://localhost:9002/bundle.js', "__ml");
+    </script> -->
     <!-- <script> !(function (c, b, d, a) { c[a] || (c[a] = {}); c[a].config = { userId: '5b9f47df6fda8a3a48b408a3',appKey: '5b9f4c7bee62f14e00abc78e', imgUrl: 'http://localhost:9000/Up?',disableHook:false, disableJS:false }; var dom = document.createElement("script"); dom.setAttribute("crossorigin", "anonymous"); dom.setAttribute("src", d); document.body.insertBefore(dom, document.body.firstChild); })(window, document, 'http://localhost:9002/bundle.js', "__ml"); </script> -->
     <!-- <script> !(function (c, b, d, a) { c[a] || (c[a] = {}); c[a].config = { userId: '',appKey: '5b992529d09e250b90baed9b', imgUrl: 'http://hubing.online:8081/Up?',disableHook:false, disableJS:false }; var dom = document.createElement("script"); dom.setAttribute("crossorigin", "anonymous"); dom.setAttribute("src", d); document.body.insertBefore(dom, document.body.firstChild); })(window, document, 'http://hubing.online:8082/bundle.js', "__ml"); </script> -->
     <app-root></app-root>
