--- a/web/src/index.html
+++ b/web/src/index.html
@@ -8,7 +8,7 @@
     <meta name="renderer" content="webkit">
     <meta name="keywords" content="前端监控，前端性能监控，前端异常监控，前端请求监控，web，web-monitor，monitor">
     <meta name="description" content="前端监控，性能监控平台。The front end monitoring platform focuses on Web end experience data monitoring. Three aspects of the health of Web pages are monitored: page opening speed (speed measurement), page stability (JS Error), and external service call success rate (API).">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
