--- a/web/src/index.html
+++ b/web/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>前端性能监控平台</title>
+    <title>前端监控平台</title>
     <base href="/">
     <meta name="renderer" content="webkit">
     <meta name="keywords" content="前端监控，前端性能监控，前端异常监控，前端请求监控，web，web-monitor，monitor">
