--- a/web/src/index.html
+++ b/web/src/index.html
@@ -14,6 +14,8 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
+        <!-- <script> !(function (c, b, d, a) { c[a] || (c[a] = {}); c[a].config = { userId: '',appKey: '5ea50b485b0dd76c634b9cf7', imgUrl: 'https://backsite.hubing.online/Up?',disableHook:false, disableJS:true,disableResource:true }; var dom = document.createElement("script"); dom.setAttribute("crossorigin", "anonymous"); dom.setAttribute("src", d); document.body.insertBefore(dom, document.body.firstChild); })(window, document, 'https://hubing.online/bundle.js', "__ml"); </script> -->
+
         <app-root></app-root>
         <script src="https://unpkg.com/source-map@0.7.3/dist/source-map.js"></script>
         <script>
