--- a/web/src/index.html
+++ b/web/src/index.html
@@ -14,6 +14,7 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
+        <script> !(function (c, b, d, a) { c[a] || (c[a] = {}); c[a].config = { userId: '',appKey: '5f4f405a60716e56d4a7d60b', imgUrl: 'http://localhost:9000/Up?',disableHook:false, disableJS:false,disableResource:false }; var dom = document.createElement("script"); dom.setAttribute("crossorigin", "anonymous"); dom.setAttribute("src", d); document.body.insertBefore(dom, document.body.firstChild); })(window, document, 'http://localhost:9002/bundle.js', "__ml"); </script>
         <app-root></app-root>
         <script src="https://unpkg.com/source-map@0.7.3/dist/source-map.js"></script>
         <script>
